# honeypot-m1spro

./: .env.example  .gitattributes  .gitignore  .semgrepignore  CHANGELOG.md  PREUVES_KALI.md  README.md  docker-compose.localtest.yml  generate_rapport.py  pyproject.toml
.github/workflows/: ci.yml
Rapport des Tests/: Rapport_Audit_secure_app.docx  Rapport_Audit_vuln_app.docx  Rapport_General_secure_vs_vuln.docx
Rapport des Tests/Document soumis/: Rapport_Complet_M1SPRO_ANANI_BOHOUSSOU.docx  presentation_M1SPRO.html  ~$pport_Complet_M1SPRO_ANANI_BOHOUSSOU.docx
analyzer/: Dockerfile  __init__.py  api.py  backfill_geoip.py  classifier.py  db.py  evaluate.py  exports.py  shipper.py
analyzer/enrichers/: __init__.py  abuseipdb.py  geoip.py
attacks/: _lib.sh  assert_logs.py  replay_dataset.py  replay_dataset.sh  run_all.sh  run_attacks_windows.ps1  run_ftp_brute.sh  run_http_scan.sh  run_ssh_bruteforce.sh  smoke_test.sh
dashboard/grafana/dashboards/: app-comparatif.json  honeypot.json
dashboard/grafana/provisioning/dashboards/: dashboards.yml
dashboard/grafana/provisioning/datasources/: postgres.yml
data/datasets/: public-attacks.jsonl
docs/: attribution-ip-source.md  charte-rgpd.md  guide-test-windows.md  note-cadrage.md  secure-app-couverture-m1spro.md  stealth-audit-final.md  stealth-audit-initial.md
honeypots/common/: __init__.py  events.py  fakeshell.py
honeypots/ftp/: Dockerfile  server.py
honeypots/http/: Dockerfile  server.py
honeypots/ssh/: Dockerfile  server.py
honeypots/telnet/: Dockerfile  server.py
infra/: docker-compose.yml
labs/j2-buffer-overflow/: Makefile  README.md  hardened.c  run_demo.sh  vulnerable.c
schemas/: event.schema.json  profiles.json
secure_app/: .env.example  Dockerfile  __init__.py  app_telemetry.py  attaque_kali.sh  config.py  crypto.py  database.py  demo_attack_defense.ps1  dependencies.py  logging_conf.py  main.py  ratelimit.py  repository.py  schemas.py  security.py  seed.py  validators.py
secure_app/routers/: __init__.py  auth.py  notes.py  secrets.py  tools.py  users.py
secure_app/static/: app.js  common.js  dashboard.html  dashboard.js  home.js  index.html  login.html  login.js  register.html  register.js  secrets.html  secrets.js  styles.css
tests/: conftest.py  test_classifier.py  test_classifier_metrics.py  test_exports.py  test_fakeshell.py  test_schema.py
tests/secure_app/: conftest.py  test_auth.py  test_bola.py  test_injection.py  test_jwt.py  test_ratelimit.py  test_ui.py  test_validation.py
vuln_app/: Dockerfile  README.md  __init__.py  app_telemetry.py  demo_comparatif.sh  docker-compose.yml  main.py  requirements.txt
vuln_app/static/: common.js  dashboard.html  dashboard.js  home.js  index.html  login.html  login.js  register.html  register.js  secrets.html  secrets.js  styles.css
